# emptygaz

./: CMakeLists.txt  Readme.md  conf.ini  conf.json
src/: CMakeLists.txt  cuda_sample.cu  cuda_sample.h  json.hpp  main.cpp  mainjson.cpp
